@@ -34,6 +34,7 @@ Other features
  * Added support for custom search handler classes to modeladmin's IndexView, and added a class that uses the default Wagtail search backend for searching (Seb Brown, Andy Babic)
  * Improved heading structure for screen reader users navigating the CMS admin (Beth Menzies, Helen Chapman)
  * Update group edit view to expose the ``Permission`` object for each checkbox (George Hickman)
+ * Improve performance of Pages for Moderation panel (Fidel Ramos)
 
 
 Bug fixes
